      query(func.count(A.name)).count() will return a value of
      one, since that query would return one row.
      
- bugfixes and behavioral changes
- general:
    - global "propigate"->"propagate" change.

- orm
    - Query.get() returns a more informative
      error message when executed against multiple entities.
      [ticket:1220]
      
- access
    - Added support for Currency type.

    - Functions were not return their result. [ticket:1017]

    - Corrected problem with joins. Access only support 
      LEFT OUTER or INNER not just JOIN by itself. 
      [ticket:1017]

- mssql
    - Lots of cleanup and fixes to correct problems with
      limit and offset.

    - Correct situation where subqueries as part of a
      binary expression need to be translated to use the
      IN and NOT IN syntax.

    - Fixed E Notation issue that prevented the ability to
      insert decimal values less than 1E-6. [ticket:1216]

    - Corrected problems with reflection when dealing with
      schemas, particularly when those schemas are the
      default schema. [ticket:1217]

0.5.0rc3
========
- features
- orm
    - Added two new hooks to SessionExtension:
      after_bulk_delete() and after_bulk_update().
      after_bulk_delete() is called after a bulk delete()
      operation on a query. after_bulk_update() is called 
      after a bulk update() operation on a query.

- sql
    - SQL compiler optimizations and complexity
      reduction. The call count for compiling a
      typical select() construct is 20% less versus
      0.5.0rc2.

    - Dialects can now generate label names of adjustable
      length. Pass in the argument "label_length=<value>" to
      create_engine() to adjust how many characters max will
      be present in dynamically generated column labels, i.e.
      "somecolumn AS somelabel". Any value less than 6 will
      result in a label of minimal size, consisting of an
      underscore and a numeric counter. The compiler uses the